WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117412
[GTK] Invalidate the ProcessLauncher when the process is terminated before it has finished launching
https://bugs.webkit.org/show_bug.cgi?id=117412
Summary
[GTK] Invalidate the ProcessLauncher when the process is terminated before it...
Carlos Garcia Campos
Reported
2013-06-10 09:40:57 PDT
ssia
Attachments
Patch
(1.46 KB, patch)
2013-06-10 09:43 PDT
,
Carlos Garcia Campos
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-06-10 09:43:14 PDT
Created
attachment 204170
[details]
Patch
Carlos Garcia Campos
Comment 2
2013-06-12 10:18:10 PDT
Committed
r151508
: <
http://trac.webkit.org/changeset/151508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug